@@ -20,6 +20,7 @@ Version 3.2.0 - SVN
  - Fix missing permissions for plugin interface SQL user.
  - Remove CHROOTDIR (mountpoint prefix) variable to avoid confusion
    with the directory where the Java chroot was created.
+ - Redirect to submissions overview page after verification.
 
 Version 3.1.0 - 14 July 2010
 ----------------------------
